--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,18 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "bunVersion": "1.3.5"
+  "framework": null,
+  "installCommand": "bun install",
+  "buildCommand": "bunx prisma generate",
+  "outputDirectory": null,
+  "functions": {
+    "src/index.ts": {
+      "runtime": "@vercel/bun@1.0.0"
+    }
+  },
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/src/index.ts"
+    }
+  ]
 }
