--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "bun run --watch src/index.ts",
     "start": "bun run src/index.ts",
-    "build": "tsdown src/index.ts -d api --dts",
+    "build": "tsdown src/index.ts -d api --no-splitting",
     "generate": "bunx prisma generate",
     "db:generate": "bunx prisma generate",
     "db:push": "bunx prisma db push",
