--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "bunVersion": "1.3.2",
-    "buildCommand": "bun run build",
+    "buildCommand": "bunx prisma generate && bun run build",
     "outputDirectory": "api",
     "rewrites": [
         {
