--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
-    "bunVersion": "1.3.2",
+    "bunVersion": "1.3.5",
     "buildCommand": "bunx prisma generate && bun run build",
-    "outputDirectory": "api",
+    "outputDirectory": "dist",
     "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "/api"
+            "destination": "/dist"
         }
     ]
 }
